Refactored pom.xml